syntax = "proto2";

package blitzkit;

message RatingLeaderboard {
  oneof version {
    RatingLeaderboardV1 v1 = 1;
    RatingLeaderboardV2 v2 = 2;
  }
}

message RatingLeaderboardV1 {
  repeated RatingLeaderboardEntryV1 entries = 1;
}

message RatingLeaderboardEntryV1 {
  required uint32 id = 1;
  required uint32 score = 2;
}

message RatingLeaderboardV2 {
  repeated RatingLeaderboardEntryV2 entries = 1;
}

message RatingLeaderboardEntryV2 {
  required uint32 id = 1;
  required uint32 score = 2;
  required uint32 battles = 3;
  required uint32 wins = 4;
  required uint32 survived = 5;
  required uint32 damage = 6;
  required uint32 kills = 7;
}